--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -110,7 +110,7 @@
 }
 
 .headerLocales {
-
+cursor: pointer;
   @extend .headerLinks;
   margin: 0 0 0 2em;
 
@@ -119,7 +119,7 @@
     margin-left: 0;
   }
 
-  a {
+  a,img {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,6 +131,8 @@
     text-transform: uppercase;
     background-color: $color-header-links;
     border-radius: 100%;
+    
   }
+
 
 }
