setup products page

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -46,6 +46,9 @@
   list-style: none;
   padding: 0;
   margin: 0 2em;
+:hover{
+  color:white;
+}
 
   @media (max-width: 720px) {
     width: 100%;
