--- a/src/styles/Page.module.scss
+++ b/src/styles/Page.module.scss
@@ -20,6 +20,49 @@
   }
 
 }
+.categoryData{
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  :hover{
+ 
+    color: gray;
+    transform: scale(1.1) ease-in-out;
+    cursor: pointer;
+  }
+  
+  li{
+    
+    transition: 0.5s;
+    outline: none;
+    display: inline-block;
+    text-align: center;
+
+   
+  }
+}
+
+
+.input{
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  padding: 12px 20px;
+  font-size: larger;
+  box-sizing: border-box;
+  transition: 0.5s;
+  outline: none;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  text-align: center;
+}
+
 
 .heroContent {
 
@@ -100,6 +143,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 3em;
+
+
 }
 
 .productTitle {
@@ -115,6 +160,11 @@
 
   & > div {
     display: block!important;
+  }
+  &:hover{
+    transition: cubic-bezier(0.215, 0.610, 0.355, 1) 3s;
+    cursor: pointer;
+   
   }
 
 }
